[FIX] website, website_sale, sale: add to cart + checkout mobile fixes
Before the change, in the mobile version of the eCommerce cart and
add to cart page, if a product had a name that was too long or the
font size was too big it would push the elements to its right
offscreen.
After the change, the overflow of a product name that is too long or
too big gets replaced with ellipsis, keeping the elements to its right
from beign pushed offscreen.

The add to cart mobile page has also been refactored to be more
similar to the checkout page.

Furthermore, a bug with the alert message that caused it to be
squished in the "add to cart" page and a bug in the same page with
the background scrollbar still beign visible when the dialog is open
have been fixed.

task-4260720
opw-4253880

closes odoo/odoo#188842

--- a/addons/sale/static/src/js/quantity_buttons/quantity_buttons.scss
+++ b/addons/sale/static/src/js/quantity_buttons/quantity_buttons.scss
@@ -1,5 +1,14 @@
 input[name="sale_quantity"] {
-    max-width: 4rem;
+    padding: 0;
+
+    @include media-breakpoint-down(md) {
+        max-width: 3rem;
+    }
+
+    @include media-breakpoint-up(md) {
+        max-width: 4rem;
+    }
+    
     // removing input field=number arrows as their size might
     // change depending on browser default styling and shift input's position
     &::-webkit-outer-spin-button,
